test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-oknil-borrowed.good
init-field-dflt-nonnil-unmanaged-from-oknil-borrowed.chpl:8: error: Cannot initialize lhs of non-nilable type 'unmanaged MyClass' from a nilable 'borrowed MyClass?'
